<resources>
    <string name="app_name">Учимся считать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittleNumOfLevels">Число уровней:</string>
    <string name="slider_description">Число уровней</string>
    <string name="tittleNumOfExercises">Примеров на уровне:</string>
    <string name="tittleNumOfMistakes">Ошибок на уровне:</string>
    <string name="switchMultiplication">Таблица умножения</string>
    <string name="switchTimer">Таймер:</string>
    <string name="tittleTimer">Время на пример, сек:</string>
    <string name="tittleTimerPlus">Таймер+, сек:</string>
    <string name="buttonSave">Сохранить</string>
    <string name="tittle">Настройки</string>
    <string name="timer_window_description">Время на пример</string>
    <string name="timer_plus_description">Прибавление времени к уровню</string>
    <string name="tittleTrueWindow">Верно:</string>
    <string name="tittleFalseWindow">Неверно:</string>
    <string name="ok">Ясно</string>
    <string name="buttonAnswer">Ответить</string>
    <string name="tittleStatistic">Статистика</string>
    <string name="tittleNumOfExercisesStat">Примеров решено:</string>
    <string name="grade">Оценка:</string>
    <string name="tittleTimeOfExercises">Времени прошло:</string>
    <string name="buttonAgain">Начать сначала</string>
    <string name="btnAgain">Заново</string>
    <string name="btnClose">Закрыть</string>
    <string name="versionNumber">Version 1.2</string>
    <string name="btnLevelNum">Число уровней</string>
    <string name="btnExerciseNum">Примеров на уровне</string>
    <string name="btnMistakesNum">Ошибок на уровне</string>
    <string name="btnMultiplication">Таблица умножения</string>
</resources>