<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2C2E"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            android:text="@string/tittle"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider0"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:layout_editor_absoluteX="1dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleNumOfLevels"
            style="@style/TittleTextStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/tittleNumOfLevels"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            tools:layout_editor_absoluteX="166dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderNumOfLevels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/slider_description"
            android:stepSize="1"
            android:value="1"
            android:layout_marginTop="10dp"
            android:valueFrom="1"
            android:valueTo="4"
            app:labelBehavior="floating"
            app:layout_constraintTop_toBottomOf="@+id/tittleNumOfLevels"
            app:thumbColor="#00FF00"
            app:thumbRadius="10dp"
            app:thumbStrokeColor="@color/white"
            app:tickColor="#00FF00"
            app:trackHeight="3dp"
            app:thumbStrokeWidth="2dp"
            app:trackColor="@android:color/holo_blue_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleNumOfExercises"
            style="@style/TittleTextStyle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittleNumOfExercises"
            app:layout_constraintTop_toBottomOf="@+id/sliderNumOfLevels"
            tools:layout_editor_absoluteX="166dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderNumOfExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/slider_description"
            android:stepSize="5"
            android:value="5"
            android:layout_marginTop="10dp"
            android:valueFrom="5"
            android:valueTo="20"
            app:labelBehavior="floating"
            app:layout_constraintTop_toBottomOf="@+id/tittleNumOfExercises"
            app:thumbColor="#00FF00"
            app:thumbRadius="10dp"
            app:thumbStrokeColor="@color/white"
            app:tickColor="#00FF00"
            app:trackHeight="3dp"
            app:thumbStrokeWidth="2dp"
            app:trackColor="@android:color/holo_blue_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleNumOfMistakes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TittleTextStyle"
            android:layout_marginTop="10dp"
            android:text="@string/tittleNumOfMistakes"
            app:layout_constraintTop_toBottomOf="@+id/sliderNumOfExercises"
            tools:layout_editor_absoluteX="166dp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderNumOfMistakes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/slider_description"
            android:stepSize="1"
            android:value="1"
            android:layout_marginTop="10dp"
            android:valueFrom="1"
            android:valueTo="5"
            app:labelBehavior="floating"
            app:layout_constraintTop_toBottomOf="@+id/tittleNumOfMistakes"
            app:thumbColor="#00FF00"
            app:thumbRadius="10dp"
            app:thumbStrokeColor="@color/white"
            app:tickColor="#00FF00"
            app:trackHeight="3dp"
            app:thumbStrokeWidth="2dp"
            app:trackColor="@android:color/holo_blue_light" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchMultiplication"
            style="@style/MySwitch"
            android:checked="false"
            app:switchPadding="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderNumOfMistakes" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@+id/switchMultiplication"
            tools:layout_editor_absoluteX="1dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTimer"
            style="@style/MySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchTimer"
            android:checked="true"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:switchPadding="15dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleTimer"
            style="@style/TittleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/tittleTimer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchTimer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleTimerPlus"
            style="@style/TittleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tittleTimerPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tittleTimer"
            app:layout_constraintTop_toBottomOf="@+id/switchTimer" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/timerWindow"
            style="@style/TittleTextStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:background="@drawable/round_style"
            tools:text="10"
            app:layout_constraintEnd_toEndOf="@+id/tittleTimer"
            app:layout_constraintStart_toStartOf="@+id/tittleTimer"
            app:layout_constraintTop_toBottomOf="@+id/tittleTimer" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/timerPlusWindow"
            style="@style/TittleTextStyle"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_style"
            android:inputType="number"
            tools:text="10"
            app:layout_constraintEnd_toEndOf="@+id/tittleTimerPlus"
            app:layout_constraintStart_toStartOf="@+id/tittleTimerPlus"
            app:layout_constraintTop_toBottomOf="@+id/tittleTimer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            style="@style/TittleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_style"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerWindow" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>